[package]
name = "order-tracker"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.3.1", features = ["derive"] }
solana-program = "1.18.2"
spl-associated-token-account = { version = "=2.3.0", features = ["no-entrypoint"] }
spl-program-error = "0.3.1"
spl-token-2022 = { version = "2.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
async-trait = "0.1.77"
solana-program-test = "1.18.2"
solana-sdk = "1.18.2"
